2015-04-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Increase the buffer size to read a LOB.

2015-04-04  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-instant-client.md, ext/oci8/lob.c, ext/oci8/metadata.c,
	  ext/oci8/oci8.c: Update documents for YARD.

2015-04-02  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Fix SEGV when a temporary LOB is freed by GC
	    while reading another lob and the ruby version is 2.0.0 or
	    upper.

2015-03-01  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/cursor.rb, lib/oci8/properties.rb:
	    Fix errors while generating documents by yard such as
	    "Exception occurred while generating 'OCI8/Cursor.html'."

2015-03-01  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h: Rollback transactions on
	    logoff only when the transactions are in progress.

2015-01-27  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
	  ext/oci8/stmt.c: Suppreess warnings: "[warn]: @param tag has unknown parameter name: xxx"
            by yard.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add OCI8#send_timeout, OCI8#send_timeout=,
	    OCI8#recv_timeout and OCI8#recv_timeout=.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h:
	    Fix for cancel_read_at_exit on Windows.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8lib.c, lib/oci8/properties.rb:
	    Add OCI8.properties[:cancel_read_at_exit].

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/hook_funcs.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/plthook.h,
	  ext/oci8/plthook_elf.c, ext/oci8/plthook_osx.c,
	  ext/oci8/plthook_win32.c: Cancel read system calls at exit
	    not to block ruby process termination.
	    This works on Linux, OSX and Windows Vista or upper.
	    (github issue #56)

2015-01-12  Kubo Takehiro  <kubo@jiubao.org>